--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.4",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.3",
         "laravel/tinker": "^2.10.1",
-        "twilio/sdk": "^8.11"
+        "twilio/sdk": "^8.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
