--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,7 @@
+# PHP upload limits
+php_value upload_max_filesize 25M
+php_value post_max_size 30M
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
